--- a/system/dev/board/BUILD.gn
+++ b/system/dev/board/BUILD.gn
@@ -21,6 +21,7 @@ group("board") {
       "sherlock",
       "vim2",
       "rpi3",
+      "rpi4",
     ]
   } else if (current_cpu == "x64") {
     deps += [ "x86" ]
