pl011 uart support & package-image & Makefile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         ],
         "cstdio": "cpp",
         "debug.h": "cpp",
-        "stdio.h": "cpp"
+        "stdio.h": "cpp",
+        "*.bak": "c"
     }
 }
