--- a/system/dev/board/BUILD.gn
+++ b/system/dev/board/BUILD.gn
@@ -22,6 +22,7 @@ group("board") {
       "vim2",
       "rpi3",
       "rpi4",
+      "rpi4-pl011"
     ]
   } else if (current_cpu == "x64") {
     deps += [ "x86" ]
